// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DelegateRegistrationForm > should render form step 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        data-testid="ValidatorRegistrationForm_form-step"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-2"
          >
            <div
              class="flex gap-3 items-center"
            >
              <h1
                class="mb-0 text-2xl leading-[29px]"
                data-testid="header__title"
              >
                Register Validator
              </h1>
            </div>
            <div
              class="flex items-center leading-5 text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Register a new Validator address on the network below.
            </div>
          </div>
        </div>
        <div
          class="-mx-3 mt-6 sm:mx-0 sm:mt-4"
        >
          <div
            data-testid="DetailWrapper"
          >
            <div
              class="py-2 px-3 border-l-2 sm:p-0 sm:bg-transparent sm:border-none dark:bg-black border-x-theme-primary-400 bg-theme-secondary-100 dark:sm:bg-transparent"
              data-testid="DetailLabel"
            >
              <div
                class="font-semibold leading-5 no-ligatures min-w-24 text-theme-secondary-700 text-md dark:text-theme-secondary-500"
                data-testid="DetailLabelText"
              >
                Addressing
              </div>
            </div>
            <div
              class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 [.condensed_&]:sm:py-4 mt-0 sm:mt-2"
            >
              <div
                class="flex justify-between items-center space-x-2 sm:justify-start sm:space-x-0"
              >
                <div
                  class="w-20 text-sm font-semibold sm:text-base sm:leading-5 no-ligatures shrink-0 leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  From
                </div>
                <div
                  class="flex overflow-hidden justify-end items-center space-x-2 w-full whitespace-nowrap sm:justify-start"
                >
                  <span
                    class="text-sm text-base font-semibold sm:text-base sm:leading-5 text-theme-text leading-[17px]"
                    data-testid="Address__alias"
                  >
                    <span
                      class="transition-colors duration-200 no-ligatures"
                      data-testid="TruncateEnd"
                    >
                      ARK Wallet 1
                    </span>
                  </span>
                  <div
                    class="relative text-left sm:leading-5 grow leading-[17px]"
                  >
                    <span
                      class="overflow-hidden absolute w-3/4 w-full min-w-0 text-sm text-base font-semibold sm:text-base sm:leading-5 no-ligatures leading-[17px] text-theme-secondary-500 dark:text-theme-secondary-700"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                    <span>
                       
                    </span>
                  </div>
                  <button
                    class="relative ring-focus focus:outline-hidden"
                    data-ring-focus-margin="-m-1"
                    data-testid="clipboard-icon__wrapper"
                    type="button"
                  >
                    <div
                      class="text-theme-primary-400 dark:text-theme-secondary-600 dark:hover:text-white hover:text-theme-primary-700"
                    >
                      <div
                        style="height: 16px; width: 16px;"
                      >
                        <svg
                          id="copy"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                            />
                            <path
                              d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-3 space-y-4 sm:mt-4"
        >
          <fieldset
            class="[&>.FormLabel]:text-theme-primary-600 focus-within:[&>.FormLabel]:text-theme-primary-600 flex min-w-0 flex-col"
          >
            <label
              class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100 hover:!text-theme-primary-600"
              data-testid="FormLabel"
              for="validatorPublicKey"
            >
              Validator Public Key
            </label>
            <div
              class="flex overflow-hidden items-center px-4 space-x-2 w-full h-12 rounded border transition-colors duration-200 appearance-none sm:h-14 focus-within:ring-1 text-theme-text border-theme-secondary-400 bg-theme-background dark:border-theme-secondary-700 focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600"
            >
              <div
                class="flex relative flex-1 h-full"
              >
                <input
                  autocomplete="off"
                  class="!bg-transparent !p-0 focus:shadow-none focus:outline-hidden focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
                  data-testid="Input__validator_public_key"
                  name="validatorPublicKey"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </fieldset>
          <fieldset
            class="[&>.FormLabel]:text-theme-primary-600 focus-within:[&>.FormLabel]:text-theme-primary-600 flex min-w-0 flex-col"
          >
            <label
              class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100 hover:!text-theme-primary-600"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
            </label>
            <div
              class="relative"
              data-testid="InputFee"
            >
              <div
                class="absolute right-0 -mt-7"
              >
                <div
                  class="flex items-center"
                >
                  <span
                    class="css-1588dqn"
                    role="button"
                  >
                    Simple
                  </span>
                  <label
                    class="css-1uxo3sa"
                  >
                    <input
                      class="css-1r71f0z toggle-input"
                      type="checkbox"
                    />
                    <div
                      class="css-10kxbe9 toggle-handle"
                    >
                      <span
                        class="css-14ojvms"
                      />
                    </div>
                  </label>
                  <span
                    class="css-noruk0"
                    role="button"
                  >
                    Advanced
                  </span>
                </div>
              </div>
              <div
                class="inline-flex items-center space-x-3 w-full"
                data-testid="ButtonGroup"
                role="radiogroup"
              >
                <button
                  aria-checked="false"
                  aria-label="0"
                  class="flex justify-center items-center p-3 w-full h-full font-semibold rounded border-2 transition-colors duration-300 focus:ring-2 disabled:border disabled:cursor-not-allowed border-theme-primary-100 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:checked:cursor-default dark:checked:bg-theme-primary-900 dark:checked:text-theme-primary-50 dark:hover:border-theme-secondary-800 dark:hover:bg-theme-secondary-800 dark:hover:text-theme-secondary-200 checked:border-theme-primary-600 checked:bg-theme-primary-50 checked:text-theme-primary-700 hover:border-theme-primary-100 hover:bg-theme-primary-100 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400 disabled:border-theme-secondary-300 disabled:text-theme-secondary-500 disabled:dark:border-theme-secondary-700 disabled:dark:text-theme-secondary-700"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <div>
                      Slow
                    </div>
                    <span
                      class="text-sm whitespace-nowrap"
                      data-testid="Amount"
                    >
                      0 DARK
                    </span>
                  </div>
                </button>
                <button
                  aria-checked="true"
                  aria-label="1.354"
                  class="flex justify-center items-center p-3 w-full h-full font-semibold rounded border-2 transition-colors duration-300 focus:ring-2 disabled:border disabled:cursor-not-allowed border-theme-primary-100 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:checked:cursor-default dark:checked:bg-theme-primary-900 dark:checked:text-theme-primary-50 dark:hover:border-theme-secondary-800 dark:hover:bg-theme-secondary-800 dark:hover:text-theme-secondary-200 checked:border-theme-primary-600 checked:bg-theme-primary-50 checked:text-theme-primary-700 hover:border-theme-primary-100 hover:bg-theme-primary-100 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400 disabled:border-theme-secondary-300 disabled:text-theme-secondary-500 disabled:dark:border-theme-secondary-700 disabled:dark:text-theme-secondary-700"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <div>
                      Average
                    </div>
                    <span
                      class="text-sm whitespace-nowrap"
                      data-testid="Amount"
                    >
                      1.354 DARK
                    </span>
                  </div>
                </button>
                <button
                  aria-checked="false"
                  aria-label="10"
                  class="flex justify-center items-center p-3 w-full h-full font-semibold rounded border-2 transition-colors duration-300 focus:ring-2 disabled:border disabled:cursor-not-allowed border-theme-primary-100 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:checked:cursor-default dark:checked:bg-theme-primary-900 dark:checked:text-theme-primary-50 dark:hover:border-theme-secondary-800 dark:hover:bg-theme-secondary-800 dark:hover:text-theme-secondary-200 checked:border-theme-primary-600 checked:bg-theme-primary-50 checked:text-theme-primary-700 hover:border-theme-primary-100 hover:bg-theme-primary-100 hover:text-theme-primary-700 focus:outline-hidden focus:ring-theme-primary-400 disabled:border-theme-secondary-300 disabled:text-theme-secondary-500 disabled:dark:border-theme-secondary-700 disabled:dark:text-theme-secondary-700"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <div>
                      Fast
                    </div>
                    <span
                      class="text-sm whitespace-nowrap"
                      data-testid="Amount"
                    >
                      10 DARK
                    </span>
                  </div>
                </button>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelegateRegistrationForm > should render review step 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        data-testid="DelegateRegistrationForm__review-step"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-2"
          >
            <div
              class="flex gap-3 items-center"
            >
              <h1
                class="mb-0 text-2xl leading-[29px]"
                data-testid="header__title"
              >
                Transaction Review
              </h1>
            </div>
            <div
              class="flex items-center leading-5 text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Review the transaction details below.
            </div>
          </div>
        </div>
        <div
          class="-mx-3 mt-6 space-y-3 sm:mx-0 sm:mt-4 sm:space-y-4"
        >
          <div
            data-testid="DetailWrapper"
          >
            <div
              class="py-2 px-3 border-l-2 sm:p-0 sm:bg-transparent sm:border-none dark:bg-black border-x-theme-primary-400 bg-theme-secondary-100 dark:sm:bg-transparent"
              data-testid="DetailLabel"
            >
              <div
                class="font-semibold leading-5 no-ligatures min-w-24 text-theme-secondary-700 text-md dark:text-theme-secondary-500"
                data-testid="DetailLabelText"
              >
                Addressing
              </div>
            </div>
            <div
              class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 [.condensed_&]:sm:py-4 mt-0 sm:mt-2"
            >
              <div
                class="flex justify-between items-center space-x-2 sm:justify-start sm:space-x-0"
              >
                <div
                  class="w-auto text-sm font-semibold sm:text-base sm:leading-5 no-ligatures shrink-0 leading-[17px] text-theme-secondary-700 sm:min-w-44 dark:text-theme-secondary-500"
                >
                  From
                </div>
                <div
                  class="flex overflow-hidden justify-end items-center space-x-2 w-full whitespace-nowrap sm:justify-start"
                >
                  <span
                    class="text-sm text-base font-semibold sm:text-base sm:leading-5 text-theme-text leading-[17px]"
                    data-testid="Address__alias"
                  >
                    <span
                      class="transition-colors duration-200 no-ligatures"
                      data-testid="TruncateEnd"
                    >
                      ARK Wallet 1
                    </span>
                  </span>
                  <div
                    class="relative text-left sm:leading-5 grow leading-[17px]"
                  >
                    <span
                      class="overflow-hidden absolute w-3/4 w-full min-w-0 text-sm text-base font-semibold sm:text-base sm:leading-5 no-ligatures leading-[17px] text-theme-secondary-500 dark:text-theme-secondary-700"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                    <span>
                       
                    </span>
                  </div>
                  <button
                    class="relative ring-focus focus:outline-hidden"
                    data-ring-focus-margin="-m-1"
                    data-testid="clipboard-icon__wrapper"
                    type="button"
                  >
                    <div
                      class="text-theme-primary-400 dark:text-theme-secondary-600 dark:hover:text-white hover:text-theme-primary-700"
                    >
                      <div
                        style="height: 16px; width: 16px;"
                      >
                        <svg
                          id="copy"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                            />
                            <path
                              d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            data-testid="DetailWrapper"
          >
            <div
              class="py-2 px-3 border-l-2 sm:p-0 sm:bg-transparent sm:border-none dark:bg-black border-x-theme-primary-400 bg-theme-secondary-100 dark:sm:bg-transparent"
              data-testid="DetailLabel"
            >
              <div
                class="font-semibold leading-5 no-ligatures min-w-24 text-theme-secondary-700 text-md dark:text-theme-secondary-500"
                data-testid="DetailLabelText"
              >
                Transaction Type
              </div>
            </div>
            <div
              class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 [.condensed_&]:sm:py-4 mt-0 sm:mt-2"
            >
              <div
                class="space-y-3 sm:space-y-0"
              >
                <div
                  class="flex gap-4 justify-between items-center w-full sm:justify-start"
                >
                  <div
                    class="w-auto text-sm font-semibold sm:text-base sm:leading-5 no-ligatures shrink-0 leading-[17px] text-theme-secondary-700 sm:min-w-40 dark:text-theme-secondary-500"
                  >
                    Category
                  </div>
                  <div
                    class="flex items-center px-1 rounded dark:bg-transparent dark:border bg-theme-secondary-200 py-[3px] dark:border-theme-secondary-800"
                  >
                    <span
                      class="font-semibold text-[12px] leading-[15px] text-theme-secondary-700 dark:text-theme-secondary-500"
                    >
                      Registration
                    </span>
                  </div>
                </div>
                <div
                  class="hidden sm:block"
                >
                  <div
                    class="flex clear-both my-4 w-full min-w-full h-4 border-t border-dashed [background:none] border-theme-secondary-300 dark:border-theme-secondary-800"
                  />
                </div>
                <div
                  class="flex gap-4 justify-between items-center w-full sm:justify-start"
                >
                  <div
                    class="w-auto text-sm font-semibold sm:text-base sm:leading-5 no-ligatures shrink-0 leading-[17px] text-theme-secondary-700 sm:min-w-40 dark:text-theme-secondary-500"
                  >
                    Validator Public Key
                  </div>
                  <div
                    class="text-sm font-semibold sm:text-base sm:leading-5 no-ligatures truncate leading-[17px] text-theme-secondary-900 dark:text-theme-secondary-200"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            data-testid="DetailWrapper"
          >
            <div
              class="py-2 px-3 border-l-2 sm:p-0 sm:bg-transparent sm:border-none dark:bg-black border-x-theme-primary-400 bg-theme-secondary-100 dark:sm:bg-transparent"
              data-testid="DetailLabel"
            >
              <div
                class="font-semibold leading-5 no-ligatures min-w-24 text-theme-secondary-700 text-md dark:text-theme-secondary-500"
                data-testid="DetailLabelText"
              >
                Transaction Summary
              </div>
            </div>
            <div
              class="p-3 mt-0 sm:p-0 sm:mt-2"
            >
              <div
                class="rounded-lg border border-theme-secondary-300 dark:border-theme-secondary-800"
              >
                <div
                  class="relative py-4 px-6 sm:py-5"
                >
                  <div
                    class="flex flex-col divide-y sm:flex-row sm:divide-y-0 sm:divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
                  >
                    <div
                      class="flex flex-col justify-center px-4 mb-4 text-center sm:p-0 sm:mb-0 sm:w-1/2 sm:text-left"
                    >
                      <span
                        class="text-sm font-semibold text-theme-secondary-500"
                      >
                        Transaction(s) Amount
                      </span>
                      <span
                        class="mt-1 font-semibold whitespace-nowrap text-md"
                        data-testid="Amount"
                      >
                        0 DARK
                      </span>
                    </div>
                    <div
                      class="flex flex-col justify-center p-2 px-4 pt-6 text-center sm:p-0 sm:w-1/2 sm:text-right"
                    >
                      <span
                        class="text-sm font-semibold text-theme-secondary-500"
                      >
                        Transaction Fee
                      </span>
                      <span
                        class="mt-1 font-semibold whitespace-nowrap text-md"
                        data-testid="Amount"
                      >
                        2 DARK
                      </span>
                    </div>
                  </div>
                  <div
                    class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2"
                  >
                    <div
                      class="p-2 ml-px bg-theme-background text-theme-secondary-900 dark:text-theme-secondary-600"
                    >
                      <div>
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            id="plus"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M1 10h18M10 1v18"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex flex-col items-center py-4 rounded-b-lg border-t sm:py-5 justfiy-center border-theme-secondary-300 bg-theme-secondary-100 dark:border-theme-secondary-800 dark:bg-theme-secondary-800"
                >
                  <span
                    class="text-sm font-semibold text-theme-secondary-500"
                  >
                    Total Amount
                  </span>
                  <span
                    class="font-semibold whitespace-nowrap sm:text-lg text-md"
                    data-testid="Amount"
                  >
                    2 DARK
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelegateRegistrationForm > should set fee 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        data-testid="DelegateRegistrationForm__form-step"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-2"
          >
            <div
              class="flex gap-3 items-center"
            >
              <h1
                class="mb-0 text-2xl leading-[29px]"
                data-testid="header__title"
              >
                Register Validator
              </h1>
            </div>
            <div
              class="flex items-center leading-5 text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Register a new Validator address on the network below.
            </div>
          </div>
        </div>
        <div
          class="-mx-3 mt-6 sm:mx-0 sm:mt-4"
        >
          <div
            data-testid="DetailWrapper"
          >
            <div
              class="py-2 px-3 border-l-2 sm:p-0 sm:bg-transparent sm:border-none dark:bg-black border-x-theme-primary-400 bg-theme-secondary-100 dark:sm:bg-transparent"
              data-testid="DetailLabel"
            >
              <div
                class="font-semibold leading-5 no-ligatures min-w-24 text-theme-secondary-700 text-md dark:text-theme-secondary-500"
                data-testid="DetailLabelText"
              >
                Addressing
              </div>
            </div>
            <div
              class="w-full break-words rounded-lg border-theme-secondary-300 p-3 dark:border-theme-secondary-800 sm:border sm:px-6 sm:py-5 [.condensed_&]:sm:py-4 mt-0 sm:mt-2"
            >
              <div
                class="flex justify-between items-center space-x-2 sm:justify-start sm:space-x-0"
              >
                <div
                  class="w-20 text-sm font-semibold sm:text-base sm:leading-5 no-ligatures shrink-0 leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  From
                </div>
                <div
                  class="flex overflow-hidden justify-end items-center space-x-2 w-full whitespace-nowrap sm:justify-start"
                >
                  <span
                    class="text-sm text-base font-semibold sm:text-base sm:leading-5 text-theme-text leading-[17px]"
                    data-testid="Address__alias"
                  >
                    <span
                      class="transition-colors duration-200 no-ligatures"
                      data-testid="TruncateEnd"
                    >
                      ARK Wallet 1
                    </span>
                  </span>
                  <div
                    class="relative text-left sm:leading-5 grow leading-[17px]"
                  >
                    <span
                      class="overflow-hidden absolute w-3/4 w-full min-w-0 text-sm text-base font-semibold sm:text-base sm:leading-5 no-ligatures leading-[17px] text-theme-secondary-500 dark:text-theme-secondary-700"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                    <span>
                       
                    </span>
                  </div>
                  <button
                    class="relative ring-focus focus:outline-hidden"
                    data-ring-focus-margin="-m-1"
                    data-testid="clipboard-icon__wrapper"
                    type="button"
                  >
                    <div
                      class="text-theme-primary-400 dark:text-theme-secondary-600 dark:hover:text-white hover:text-theme-primary-700"
                    >
                      <div
                        style="height: 16px; width: 16px;"
                      >
                        <svg
                          id="copy"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                            />
                            <path
                              d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-3 space-y-4 sm:mt-4"
        >
          <fieldset
            class="[&>.FormLabel]:text-theme-primary-600 focus-within:[&>.FormLabel]:text-theme-primary-600 flex min-w-0 flex-col"
          >
            <label
              class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100 hover:!text-theme-primary-600"
              data-testid="FormLabel"
              for="validatorPublicKey"
            >
              Validator Public Key
            </label>
            <div
              class="flex overflow-hidden items-center px-4 space-x-2 w-full h-12 rounded border transition-colors duration-200 appearance-none sm:h-14 focus-within:ring-1 text-theme-text border-theme-secondary-400 bg-theme-background dark:border-theme-secondary-700 focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600"
            >
              <div
                class="flex relative flex-1 h-full"
              >
                <input
                  autocomplete="off"
                  class="!bg-transparent !p-0 focus:shadow-none focus:outline-hidden focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
                  data-testid="Input__validator_public_key"
                  name="validatorPublicKey"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </fieldset>
          <fieldset
            class="[&>.FormLabel]:text-theme-primary-600 focus-within:[&>.FormLabel]:text-theme-primary-600 flex min-w-0 flex-col"
          >
            <label
              class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100 hover:!text-theme-primary-600"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
            </label>
            <div
              class="relative"
              data-testid="InputFee"
            >
              <div
                class="absolute right-0 -mt-7"
              >
                <div
                  class="flex items-center"
                >
                  <span
                    class="css-noruk0"
                    role="button"
                  >
                    Simple
                  </span>
                  <label
                    class="css-1uxo3sa"
                  >
                    <input
                      class="css-1r71f0z toggle-input"
                      type="checkbox"
                    />
                    <div
                      class="css-10kxbe9 toggle-handle"
                    >
                      <span
                        class="css-14ojvms"
                      />
                    </div>
                  </label>
                  <span
                    class="css-1588dqn"
                    role="button"
                  >
                    Advanced
                  </span>
                </div>
              </div>
              <div
                class="relative"
              >
                <div
                  class="flex overflow-hidden items-center px-4 space-x-2 w-full h-12 rounded border transition-colors duration-200 appearance-none sm:h-14 focus-within:ring-1 text-theme-text border-theme-secondary-400 bg-theme-background dark:border-theme-secondary-700 focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600"
                >
                  <div
                    class="flex relative flex-1 h-full"
                  >
                    <input
                      autocomplete="off"
                      class="!bg-transparent !p-0 focus:shadow-none focus:outline-hidden focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
                      data-testid="InputCurrency"
                      name="fee"
                      type="text"
                      value="11"
                    />
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-none divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
                    data-testid="Input__addon-end"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="flex flex-row justify-between -mr-4 h-14 border-l sm:flex-col sm:w-10 w-22 text-theme-secondary-700 border-theme-secondary-400 dark:border-theme-secondary-700"
                        >
                          <button
                            class="flex flex-1 justify-center items-center border-r border-b sm:border-r-0 active:text-white disabled:cursor-default border-theme-secondary-400 dark:border-theme-secondary-700 hover:bg-theme-primary-100 hover:text-theme-primary-600 hover:dark:bg-theme-secondary-800 hover:dark:text-theme-primary-200 active:bg-theme-primary-700 disabled:border-theme-secondary-300 disabled:bg-theme-secondary-100 disabled:text-theme-secondary-400 disabled:dark:border-theme-secondary-700 disabled:dark:bg-theme-secondary-800 disabled:dark:text-theme-secondary-600"
                            data-testid="InputFeeAdvanced__up"
                            type="button"
                          >
                            <div>
                              <div
                                style="height: 10px; width: 10px;"
                              >
                                <svg
                                  id="chevron-up-small"
                                  style="height: 100%; width: 100%;"
                                  viewBox="0 0 10 10"
                                  x="0"
                                  xml:space="preserve"
                                  xmlns="http://www.w3.org/2000/svg"
                                  y="0"
                                >
                                  <path
                                    d="M1 6.975l3.8-3.8c.1-.1.3-.1.4 0l3.8 3.8"
                                    fill="none"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  />
                                </svg>
                              </div>
                            </div>
                          </button>
                          <button
                            class="flex flex-1 justify-center items-center active:text-white disabled:cursor-default hover:bg-theme-primary-100 hover:text-theme-primary-600 hover:dark:bg-theme-secondary-800 hover:dark:text-theme-primary-200 active:bg-theme-primary-700 disabled:border-theme-secondary-300 disabled:bg-theme-secondary-100 disabled:text-theme-secondary-400 disabled:dark:border-theme-secondary-700 disabled:dark:bg-theme-secondary-800 disabled:dark:text-theme-secondary-600"
                            data-testid="InputFeeAdvanced__down"
                            type="button"
                          >
                            <div>
                              <div
                                style="height: 10px; width: 10px;"
                              >
                                <svg
                                  id="chevron-down-small"
                                  style="height: 100%; width: 100%;"
                                  viewBox="0 0 10 10"
                                  x="0"
                                  xml:space="preserve"
                                  xmlns="http://www.w3.org/2000/svg"
                                  y="0"
                                >
                                  <path
                                    d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                                    fill="none"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  />
                                </svg>
                              </div>
                            </div>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;
